# Five-in-a-Row_MFC

./: .gitignore  CMakeLists.txt  README.md
inc/: Chess.h  ChildView.h  FIR.h  FiveInRow.h  MainFrm.h  NewDlg.h  UserMessage.h  resource.h  stdafx.h  targetver.h
res/: Five-in-a-Row.rc  Five-in-a-Row.rc2
src/: Chess.cpp  ChildView.cpp  FIR.cpp  FiveInRow.cpp  MainFrm.cpp  NewDlg.cpp  stdafx.cpp
